fix(inputcontroller): add split string in input controller
-refactor crew to use double string list