@@ -1,6 +1,7 @@
 package menu.controller;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import menu.model.Crew;
 import menu.view.InputView;
@@ -12,8 +13,9 @@ public class InputController {
     }
     public Crew getCrewsName(){
         try{
-            String names = inputView.getNames();
-            return new Crew(new ArrayList<>(List.of(names)));
+            String inputs = inputView.getNames();
+            List<String> names = Arrays.asList(inputs.split(","));
+            return new Crew(names);
         }catch (IllegalArgumentException e)
         {
             throw new IllegalArgumentException("[ERROR] Wrong input Number Format");
